--- a/composer.json
+++ b/composer.json
@@ -29,16 +29,16 @@
         "php": ">=8.1.0",
         "symfony/stimulus-bundle": "^2.9.1",
         "twig/extra-bundle": "^2.12|^3.0",
-        "symfony/twig-bundle": "^6.1|^7.0",
-        "symfony/form": "^6.1|^7.0",
-        "symfony/html-sanitizer": "^6.1|^7.0"
+        "symfony/twig-bundle": "^5.4|^6.1|^7.0",
+        "symfony/form": "^5.4|^6.1|^7.0",
+        "symfony/html-sanitizer": "^5.4|^6.1|^7.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
         "friendsofphp/php-cs-fixer": "^3.1",
-        "symfony/browser-kit": "^6.1|^7.0",
-        "symfony/framework-bundle": "^6.1|^7.0",
+        "symfony/browser-kit": "^5.4|^6.1|^7.0",
+        "symfony/framework-bundle": "^5.4|^6.1|^7.0",
         "symfony/asset-mapper": "^6.3|^7.0",
         "easycorp/easyadmin-bundle": "^4.7",
         "phpstan/phpstan-symfony": "^1.3",
